--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <script>
-        console.log('hello world');
+       var number = 0;
+        
+        for ( var number = 1 ; number <= 9; number ++){
+            for(var i = 1; i <= 9; i++){
+                console.log(number+"*"+i+"="+(number*i))
+            }      
+        }
+       
     </script>
 </body>
 </html>
